--- a/public/admin/css/main.css
+++ b/public/admin/css/main.css
@@ -10,3 +10,12 @@
     padding: 5px 0;
 }
 
+.layui-upload-list {
+    margin: 10px 0;
+}
+
+.layui-upload-img {
+    width: 92px;
+    height: 92px;
+    margin: 0 10px 10px 0;
+}
